--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vosk-browser-ts",
+    "name": "vosk-krozilo-01",
     "version": "1.0.0",
     "description": "",
     "main": "backend/dist/index.js",
