--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "copyresources____": "mkdir -p frontend/dist &&cp frontend/public/* frontend/dist && cp -r frontend/resources/* frontend/dist",
         "webpack": "webpack --config webpack.frontend.config.js",
         "build": "run-s clean webpack",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "webpack-dev-server  --config webpack.frontend.config.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -37,7 +39,7 @@
         "style-loader": "^3.3.1",
         "ts-loader": "^9.4.1",
         "typescript": "^4.8.4",
-        "webpack": "^5.74.0",
+        "webpack": "^5.75.0",
         "webpack-cli": "^4.10.0"
     },
     "dependencies": {
