--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "babel-loader": "^8.2.5",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.1",
+        "gh-pages": "^5.0.0",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.0",
         "npm-run-all": "^4.1.5",
